# chatterbox

./: .gitignore  README.md  create-env.sh  example_tts.py  example_tts_turbo.py  example_vc.py  gradio_tts_app.py  gradio_tts_turbo_app.py  gradio_vc_app.py  multilingual_app.py  pyproject.toml  setup-xpu.sh
src/chatterbox/: __init__.py  mtl_tts.py  tts.py  tts_turbo.py  vc.py
src/chatterbox/models/s3gen/: __init__.py  decoder.py  flow.py  flow_matching.py  hifigan.py  s3gen.py
src/chatterbox/models/s3gen/matcha/: decoder.py  flow_matching.py  text_encoder.py  transformer.py
src/chatterbox/models/s3gen/transformer/: embedding.py  encoder_layer.py  subsampling.py  upsample_encoder.py
src/chatterbox/models/s3gen/utils/: mask.py
src/chatterbox/models/s3tokenizer/: __init__.py  s3tokenizer.py
src/chatterbox/models/t3/: __init__.py  t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py  t3_hf_backend.py
src/chatterbox/models/t3/modules/: cond_enc.py  learned_pos_emb.py  perceiver.py
src/chatterbox/models/tokenizers/: tokenizer.py
src/chatterbox/models/voice_encoder/: voice_encoder.py
